# filetrace

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  FEATURES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  STORAGE_BACKEND_MANAGEMENT.md  fly.toml  test_storage_backend.py
.github/workflows/: docker-image.yml
api/: .env.example  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 26278111e923_文件上传增加文件原本的创建和修改时间.py  4fc0083bcb6d_add_folder_note_association_table.py  537df8d54fec_add_storage_backend_id_to_files.py.py  58d5027c1abd_add_allow_client_direct_upload_column.py  58ec203bd381_add_storage_backends_table.py  6cd3c02fe655_add_user_role_column.py  a065827f390a_initial_migration.py  c8f9d5e23a1b_add_storage_backends_table.py  ebae89491d40_add_file_type_columns.py
api/app/: app.py  database.py  models.py  schemas.py
api/app/routers/: auth.py  files.py  folders.py  notes.py  recycle.py  stats.py  storage_backends.py  users.py
api/app/services/: file_type_detector.py  jwt.py  security.py  storage.py  storage_backend.py
web/: README.md  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js
web/src/api/: authService.js  fileService.js  folderService.js  noteService.js  statsService.js  storageBackendService.js
web/src/components/: FileDetails.vue  FileFolderSelector.vue  FileGrid.vue  FileNotes.vue  FilePreview.vue  FileSelector.vue  FileUpload.vue  FolderNotes.vue  FolderSelector.vue  NavBar.vue  NoteEditor.vue  PDFViewer.vue  TextViewer.vue  UnifiedNotes.vue
web/src/router/: index.js
(+13 files in other folders)
